Ignore Scala Metals hidden directory.